# haskell-webservice-test

./: main.hs  webservice.cabal
